# lia

./: .clangd  CMakeLists.txt  README.md  TODO.md
rt/: CMakeLists.txt  lia.h  meta.c
share/: raylib.lia  std.lia
src/App/: Bind.cpp  Dump.cpp  Fold.cpp  Keyword.h  Main.cpp  Namespace.cpp  Normalize.cpp  Operator.cpp  Operator.h  Parser.cpp  Parser.h  Resolve.cpp  Stamp.cpp  SyntaxNode.cpp  SyntaxNode.h  Type.cpp  Type.h  Value.cpp  Value.h
src/App/QBE/: Context.cpp  Execute.cpp  Expr.cpp  IL.cpp  Instruction.cpp  Native.cpp  Operator.cpp  QBE.cpp  QBE.h  QBEInternal.cpp  Type.cpp
src/Lang/: Bind.cpp  Coerce.cpp  Config.cpp  Config.h  Debugger.cpp  Dump.cpp  Fold.cpp  Keyword.cpp  Keyword.h  Main.cpp  Namespace.cpp  Normalize.cpp  Operator.cpp  Operator.h  Parser.cpp  Parser.h  Resolve.cpp  Stamp.cpp  SyntaxNode.cpp  SyntaxNode.h  Type.cpp  Type.h
src/Lang/AST/: Constant.cpp  ControlFlow.cpp  Defer.cpp  Expression.cpp  Function.cpp  Identifier.cpp  Module.cpp  PreProcess.cpp  Switch.cpp  Type.cpp
src/Lang/QBE/: Context.cpp  Execute.cpp  Expr.cpp  File.cpp  Function.cpp  Instruction.cpp  Native.cpp  Operator.cpp  QBE.cpp  QBE.h  QBEInternal.cpp  Type.cpp  Value.cpp
src/Util/: JSON.cpp  Lexer.h  Logging.h  Ptr.h  StringUtil.h  Token.cpp  Utf8.h
test/: 14_struct.json  14_struct.lia  16_optional.json  16_optional.lia  17_return_struct.json  17_return_struct.lia  18_return_opt.json  18_return_opt.lia  19_must_opt.json  19_must_opt.lia  20_enum.json  20_enum.lia  21_opt_or.json  21_opt_or.lia  22_for_loop.json  22_for_loop.lia  23_return_result.json  23_return_result.lia  24_enum_tag.json  24_enum_tag.lia  25_tagged_union_literal.json  25_tagged_union_literal.lia  26_tagged_union_must.json  26_tagged_union_must.lia  27_tagged_union_or.lia  29_const_struct_var.json  29_const_struct_var.lia  30_void_func.json  30_void_func.lia  32_break.json  32_break.lia  36_switch_int.json  36_switch_int.lia  37_switch_enum.json  37_switch_enum.lia  raylib_speedrun.lia  run_tests.py  tests.json  x.lia
